Update to remove controls

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "langevitour",
+  "name": "langevitourRmControlsShiny",
   "version": "0.5.1",
   "description": "An HTML widget that randomly tours 2D projections of numerical data.",
   "type": "module",
